src/snapshots/rv__configure__tests__configure_add_after.snap
---
source: src/configure.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    {alias = "posit", url = "https://packagemanager.posit.co/cran/2024-12-16/"},
    { alias = "ppm-old", url = "https://packagemanager.posit.co/cran/2024-11-16" },
]
dependencies = [
    "dplyr",
]
