src/snapshots/rv__configure__tests__configure_clear_empty.snap
---
source: src/configure.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = []
dependencies = [
    "dplyr",
]
