src/snapshots/rv__configure__tests__configure_update_multiple_fields_by_alias.snap
---
source: src/configure.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    { alias = "posit-new", url = "https://packagemanager.posit.co/cran/latest", force_source = true }
]
dependencies = [
    "dplyr",
]
